fix docker image name

--- a/scraper-webpage.yml
+++ b/scraper-webpage.yml
@@ -6,4 +6,4 @@ functions:
   scraper-webpage:
     lang: go
     handler: ./scraper-webpage
-    image: scraper-webpage
+    image: mdhackathon/scraper-webpage
